# RedMarket

./: .env.example  LICENSE.txt  README.md  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  pytest.ini
.github/workflows/: deoploy.yml
app_account/: forms.py  models.py  serializers.py  urls.py  views.py
app_account/migrations/: 0001_initial.py  0002_remove_user_mc_uuid.py
app_item/: admin.py  models.py
app_item/migrations/: 0001_initial.py
app_item/templatetags/: custom_filters.py
app_item/tests/: conftest.py  test_item_models.py
app_order/: forms.py  mixins.py  models.py  urls.py  views.py
app_order/migrations/: 0001_initial.py  0002_order_created_by_order_updated_at.py
app_order/templatetags/: custom_tags.py
app_social/: forms.py  mixins.py  models.py  urls.py  views.py
app_social/tests/: conftest.py  test_reputation_model.py  test_thread_message_models.py
config/: item_categories.json  item_enchantments.json  item_materials.json  item_types.json
docker/mysql/: Dockerfile  setup_permissions.sh
docker/python/: Dockerfile  setup.sh
redmarket/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: insert_categories_fromconfig.py  insert_enchantments_fromconfig.py  insert_itemtypes_fromconfig.py  insert_materials_fromconfig.py
static/css/: account_nav.css  account_order_manager.css  account_public_profile.css  base.css  market.css  order_detail.css  social_thread_detail.css  style.css
static/js/: enchantments_button.js  market_search_bar.js  order_buy_button.js
templates/: base.html  market.html  market_sb.html
templates/account/: account.html  account_nav.html  login.html  order_manager.html  public_profile.html  register.html  settings.html
templates/order/: order_detail.html  wts_wizard_form.html
templates/social/: thread_detail.html
