[project]
name = "redmarket"
version = "0.1.0"
description = ""
authors = [
    {name = "RedR1ghtHand",email = "4aikaman@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.2,<6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
