[project]
name = "redmarket"
version = "0.1.0"
description = ""
authors = [
    {name = "RedR1ghtHand",email = "4aikaman@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.2,<6.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "markdown (>=3.8,<4.0)",
    "django-filter (>=25.1,<26.0)",
    "social-auth-app-django (>=5.4.3,<6.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "django-formtools (>=2.5.1,<3.0.0)",
    "roman (>=5.0,<6.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
