[project]
name = "redmarket"
version = "0.1.0"
description = ""
authors = [
    {name = "RedR1ghtHand",email = "4aikaman@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "django (>=5.2,<6.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "markdown (>=3.8,<4.0)",
    "django-filter (>=25.1,<26.0)",
    "social-auth-app-django (>=5.4.3,<6.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "django-formtools (>=2.5.1,<3.0.0)",
    "roman (>=5.0,<6.0)",
    "pytest (>=8.4.0,<9.0.0)",
    "pytest-django (>=4.11.1,<5.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "mysqlclient (>=2.2.7,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-django = "^4.11.1"
typing-extensions = "^4.14.0"
